--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:text="@string/buy_button"
+                    android:drawableLeft="@drawable/buy_icon"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +66,7 @@
                     android:layout_height="50dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/sell_button"
+                    android:drawableLeft="@drawable/sell_icon"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +79,7 @@
                     android:layout_height="50dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/viewdata_button"
+                    android:drawableLeft="@drawable/view_data_icon"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
